// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> Renders signin/signup links if not authenticated 1`] = `
<nav
  className="navbar navbar-light"
>
  <Link
    className="navbar-brand"
    replace={false}
    to="/"
  >
    Redux Auth
  </Link>
  <ul
    className="nav navbar-nav"
  >
    <li
      className="nav-item"
    >
      <Link
        className="nav-link"
        replace={false}
        to="/feature"
      >
        Feature
      </Link>
    </li>
    <li
      className="nav-item"
    >
      <Link
        className="nav-link"
        replace={false}
        to="/signin"
      >
        Sign In
      </Link>
    </li>
    <li
      className="nav-item"
    >
      <Link
        className="nav-link"
        replace={false}
        to="/signup"
      >
        Sign Up
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Header /> Renders signout link if authenticated 1`] = `
<nav
  className="navbar navbar-light"
>
  <Link
    className="navbar-brand"
    replace={false}
    to="/"
  >
    Redux Auth
  </Link>
  <ul
    className="nav navbar-nav"
  >
    <li
      className="nav-item"
    >
      <Link
        className="nav-link"
        replace={false}
        to="/feature"
      >
        Feature
      </Link>
    </li>
    <li
      className="nav-item"
    >
      <Link
        className="nav-link"
        replace={false}
        to="/"
      >
        Sign Out
      </Link>
    </li>
  </ul>
</nav>
`;
